--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,25 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="cloud_white">#ededed</color>
+    <color name="signature_pad">#E0E0E0</color>
+
+    <color name="list_row_default_bg">#444444</color>
+    <color name="list_row_pressed_bg">#242424</color>
+    <color name="list_row_selected_bg">#242424</color>
+
+    <color name="black_overlay">#66000000</color>
+    <color name="transparent_white">#ccffffff</color>
+    <color name="transparent_primary">#cc2ca614</color>
+    <color name="lightColorPrimary100">#A098f086</color>
+    <color name="half_transparent_black">#80000000</color>
+    <color name="half_transparent_white">#80FFFFFF</color>
+    <color name="half_transparent_Primary">#802ca614</color>
+    <color name="full_transparent_white">#00FFFFFF</color>
+    <color name="full_transparent_black">#00000000</color>
+
+    <color name="list_row_hover_end_color">#2ca614</color>
 </resources>
