--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,6 +80,15 @@ tools:context=".activities.firstLayer.ActivityMain">
                 android:text="SCAN QR" />
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btnProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimaryDark"
+            android:text="PROFILE" />
+
     </LinearLayout>
 
 </LinearLayout>
