--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,5 @@
 
     <color name="list_row_hover_end_color">#2ca614</color>
     <color name="material_drawer_dark_hint_text">#42FFFFFF</color>
+    <color name="list_divider">#BDBDBD</color>
 </resources>
