--- a/app/src/main/res/layout/activity_consignment_details.xml
+++ b/app/src/main/res/layout/activity_consignment_details.xml
@@ -151,7 +151,6 @@
                         android:gravity="center"
                         android:imeOptions="actionDone"
                         android:inputType="numberDecimal"
-                        android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textSize="@dimen/title_text"/>
 
@@ -354,12 +353,42 @@
                 android:layout_margin="6dp"
                 android:orientation="vertical">
 
+                <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/btnSelectDo"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/card_margin"
+                        android:background="@color/colorPrimaryDark"
+                        android:gravity="center"
+                        android:text="@string/button_select_do"
+                        android:textColor="@color/white" />
+
+                    <Button
+                        android:id="@+id/btnSelectDoAgent"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/card_margin"
+                        android:background="@color/colorPrimaryDark"
+                        android:gravity="center"
+                        android:text="@string/button_select_do_agent"
+                        android:textColor="@color/white" />
+
+                </LinearLayout>
                 <Button
                     android:id="@+id/btnUpdate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="14dp"
+                    android:layout_margin="@dimen/card_margin"
                     android:background="@color/colorPrimaryDark"
                     android:gravity="center"
                     android:padding="7dp"
