--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,8 @@ tools:context=".activities.firstLayer.ActivityMain">
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:background="@color/colorPrimaryDark"
-                android:text="SEARCH" />
+                android:text="SEARCH"
+                android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/btnScan"
@@ -77,7 +78,8 @@ tools:context=".activities.firstLayer.ActivityMain">
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:background="@color/colorPrimaryDark"
-                android:text="SCAN QR" />
+                android:text="SCAN QR"
+                android:textColor="@color/white" />
         </LinearLayout>
 
         <Button
@@ -87,7 +89,8 @@ tools:context=".activities.firstLayer.ActivityMain">
             android:layout_margin="4dp"
             android:layout_weight="1"
             android:background="@color/colorPrimaryDark"
-            android:text="PROFILE" />
+            android:text="PROFILE"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
