--- a/app/src/main/res/layout/activity_delivery.xml
+++ b/app/src/main/res/layout/activity_delivery.xml
@@ -3,53 +3,57 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--<LinearLayout-->
-        <!--android:id="@+id/footer"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:paddingTop="7dip"-->
-        <!--android:paddingBottom="7dip"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:layout_alignParentBottom="true">-->
+    <LinearLayout
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
 
-        <!--<LinearLayout-->
-            <!--android:id="@+id/footer_layout"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="horizontal"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:weightSum="2">-->
+        <LinearLayout
+            android:id="@+id/footer_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_gravity="center">
 
-            <!--<TextView-->
-                <!--android:text="@string/testing"-->
-                <!--android:id="@+id/footer_1"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:textSize="14dip"-->
-                <!--android:textStyle="bold"-->
-                <!--android:layout_marginRight="5dip"-->
-                <!--android:layout_weight="1"-->
-                <!--android:gravity="center_horizontal"/>-->
+            <Button
+                android:text="@android:string/ok"
+                android:id="@+id/footer_1"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:layout_weight="1.0"
+                android:padding="@dimen/activity_horizontal_margin"
+                android:textSize="14dip"
+                android:textStyle="bold"
+                android:textColor="@android:color/holo_blue_dark"
+                android:background="@android:color/darker_gray"/>
 
-            <!--<TextView-->
-                <!--android:text="@string/testing"-->
-                <!--android:id="@+id/footer_2"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:textSize="14dip"-->
-                <!--android:textStyle="bold"-->
-                <!--android:layout_marginRight="5dip"-->
-                <!--android:layout_weight="1"-->
-                <!--android:gravity="center_horizontal"/>-->
-        <!--</LinearLayout>-->
-    <!--</LinearLayout>-->
+            <TextView
+                android:text="@android:string/cancel"
+                android:id="@+id/footer_2"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:layout_weight="1.0"
+                android:padding="@dimen/activity_horizontal_margin"
+                android:textSize="14dip"
+                android:textStyle="bold"
+                android:textColor="@android:color/holo_blue_dark"
+                android:background="@android:color/darker_gray"/>
+        </LinearLayout>
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:layout_above="@id/footer"
         />
-    <!--android:layout_above="@id/footer"-->
 </RelativeLayout>
