--- a/app/src/main/res/layout/activity_multiple_scan.xml
+++ b/app/src/main/res/layout/activity_multiple_scan.xml
@@ -36,9 +36,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
-                android:text="@string/testing"
+                android:text="@string/finish"
                 android:layout_weight="1"
-                android:onClick="toggleFlash"
+                android:onClick="gotoList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
