--- a/app/src/main/res/layout/activity_multiple_scan.xml
+++ b/app/src/main/res/layout/activity_multiple_scan.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
+                android:id="@+id/btnFinish"
                 android:text="@string/finish"
                 android:layout_weight="1"
                 android:onClick="gotoList"
