--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,7 @@
     <color name="color_pick">#84FFFF</color>
     <color name="color_delivery">#80D8FF</color>
     <color name="color_return">#82B1FF</color>
+
+    <color name="material_drawer_dark_primary_text">#DEFFFFFF</color>
+    <color name="material_drawer_dark_secondary_text">#8AFFFFFF</color>
 </resources>
